--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+2.0
+    o	added commonality and comparison clouds
+    o	word coloring can be done on a per word basis (thanks to David Robinson)
 1.4
     o	change import to include
 1.2
