--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+2.5
+    o	updated for tm 0.6
 2.4
     o	Changed licensing statement at the request of CRAN
     o	Added fixed.asp option to wordcloud
